- TW-1724 some commands show color codes when redirected (thanks to Alan Young).
- TW-1729 zsh completion: zregexparse:4: not enough regex argument (thanks to
          Daniel Shahaf).
- Fixed broken build for Cygwin and older GCC (thanks to Richard Boß).
- The default configuration is now 256-color only.
- The 'columns' report now shows whether a column is modifiable or read only.
- Numerous performance improvements. Taskwarrior 2.5.1 is between X% and
  Y% faster than 2.5.0 when running various commands.

------ current release ---------------------------

2.5.0 (2015-10-21) dd5968a61b1fab258b38879cfdbb7d67f1bcd550

- TW-20   Task edit loses annotation precision, causing journal updating code
          to incorrectly indicate annotions are deleted and recreated (thanks
          to Cory Donnelly).
- TW-32   Unable to change annotations via task edit (thanks to Peter De
          Poorter).
- TW-46   Circular dependency detection broken for missing tasks.
- TW-50   Creation time is lost after editing (thanks to Ben Boeckel).
- TW-148  default.command options (thanks to David Patrick).
- TW-158  JSON export should model dependencies as array (thanks to Nicholas E.
          Rabenau).
- TW-263  Unexpected zsh autocomplete behaviour (thanks to Leon Feng, Marc
          Cornellà).
- TW-269  \t is not rendered correctly (thanks to Scott Kostyshak).
- TW-283  Process rc.* items when executing config (thanks to Ben Armstrong).
- TW-303  Ability for "import" to update existing tasks (thanks to Kosta
          Harlan).
- TW-1285 relative dates combined with times (thanks to Adam Gibbins).
- TW-1319 UDA is NOT sorted corresponding to the order of UDA list entries
          (thanks to Onion).
- TW-1344 Filter due:yyyy-mm-dd is failing to display daily recurring tasks if
          there is deleted task in the series.(thanks to Svetoslav Trochev).
- TW-1375 Use of ^ in regex parsed as exponentiate operator (thanks to
          lolilolicon).