@@ -278,3 +278,4 @@ suggestions:
   Naga Kiran
   David Badura
   James Dietrich
+  JDufault
